Залил домашку номер один

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <header>
         <nav>
             <ul>
-                <li>Header</li>
-                <li>Header</li>
-                <li>Header</li>
-                <li>Header</li>
+                <li><a href="Domashka1/index.html">Домашнее задание 1</a></li>
+
             </ul>
         </nav>
     </header>
